@@ -80,6 +80,8 @@ ANIMALMICROCHIPDATE
     The date the microchip was implanted
 ANIMALENTRYDATE
     The date the animal entered the shelter (date brought in). Today's date will be used if this column is not present or the value is blank.
+ANIMALENTRYCATEGORY
+    The animal's entry category, which should correspond to an entry category in your database.
 ANIMALREASONFORENTRY
     Free text, notes on the reason the animal entered the shelter.
 ANIMALDECEASEDDATE
