@@ -1,6 +1,7 @@
 44
 ================
 
+29/09/20 ANIMALENTRYCATEGORY import field, export new fields
 28/09/20 Diary note completion messages linked to wrong config item
 27/09/20 Add ANIMALJURISDICTION csv import field
 26/09/20 Close prediction attack flaw in document signing by email #917
